--- a/index.html
+++ b/index.html
@@ -2,24 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>How to Make Yourself into a Commissioning Body in 5 Easy Steps
-</title>
+    <title>How to Make Yourself into a Commissioning Body in 5 Easy Steps</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name='keywords' content='share, sharing economy, cottage industry, desiring-production, desiring-machine, deleuze, guattari, commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
-    <meta name='description' content='Artists Berdugo and Martinez teach you how to make yourself into a commissioning body in five easy steps. We source from the sharing economy. We turn fully towards the anxieties to make -- not as paralyzingly fears, but as sources for radical generativity and new, collective ways of making in Industry 4.0 and beyond. '>
+    <meta name="author" content="Liat Berdugo and Emily Martinez">
+    <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine,commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
+    <meta name='description' content='Artists Liat Berdugo and Emily Martinez teach you how to make yourself into a commissioning body in five easy steps. We source from the sharing economy. We turn fully towards the anxieties to make -- not as paralyzingly fears, but as sources for radical generativity and new, collective ways of making in Industry 4.0 and beyond.'>
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-2161839-4', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 <body>
 
@@ -40,7 +32,7 @@
 </marquee>
 </div>
 
-<a href="#hello" id="openpopup"><div id="info"><img src="img/info-09.gif"/></div></a>
+<a href="#hello" id="openpopup"><div id="info"><img src="img/info.gif"/></div></a>
 
 <!-- POP UP -->
 <aside id="hello" class="popup">
