--- a/makingyou.html
+++ b/makingyou.html
@@ -1,26 +1,19 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Important Research: Making You
-</title>
+    <title>Important Research: Making You</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name='keywords' content='share, sharing economy, cottage industry, desiring-production, desiring-machine, deleuze, guattari, commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner'>
+    <meta name="author" content="Liat Berdugo and Emily Martinez">
+    <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine,commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
     <meta name='description' content='Making You. This video was to help you understand yourself and your needs better. Please fill out our survey so that we can help you make you.'>
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
     </style>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-2161839-4', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 <body>
 
