--- a/newprojectgenerator.html
+++ b/newprojectgenerator.html
@@ -1,6 +1,14 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <title>New Project Generator</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Cache-control" content="public">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Liat Berdugo and Emily Martinez">
+    <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine,commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
+    <meta name='description' content='New Project Generator'>
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" href="css/hint.min.css">
@@ -34,6 +42,7 @@
         outline: -webkit-focus-ring-color auto 0px;
       }
     </style>
+    <script type="text/javascript" src="js/analytics.js"></script>
   </head>
 
   <body>
@@ -49,10 +58,5 @@
     <script type="text/javascript" src="js/adverbs.json"></script>
     <script type="text/javascript" src="js/gerunds.json"></script>
     <script type="text/javascript" src="js/newprojectgenerator.js"></script>
-    <script>
-
-    </script>
   </body>
-
-
 </html>
