--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>How to Make Yourself into a Commissioning Body in 5 Easy Steps</title>
@@ -45,7 +45,7 @@
         <p><b>Liat Berdugo</b> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.format.com/" target="_blank">http://liatberdugo.com/</a>.</p>
 <!--          liat's new comment-->
 
-        <p><b>Emily Martinez</b> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Martinez has an international exhibition record and holds an MFA in Digital Arts and New Media from the University of California Santa Cruz. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
+        <p><b>Emily Martinez</b> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
       </article>
    </div>        
    <a href="#!" class="closePopUpOutSide"></a>    
