--- a/help.html
+++ b/help.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Sign up now for a free one-on-one consultation!</title>
