--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
     <meta charset="UTF-8">
     <title></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +10,14 @@
     <meta name="author" content="Liat Berdugo and Emily Martinez">
     <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine, commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
     <meta name='description' content=''>
-    
+
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
-    
+
     <script type="text/javascript" src="js/analytics.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
 
-</body>
+  </body>
 
 </html>
