--- a/video-example.html
+++ b/video-example.html
@@ -19,8 +19,7 @@
           position: absolute;
           top: 50%;
           left: 50%;
-          bottom:0;
-          width: 100%;
+          width: auto;
           height: auto;
           min-width: 100%;
           min-height: 100%;
