testing  [deploy: production]

--- a/template.html
+++ b/template.html
@@ -12,10 +12,10 @@
     <meta name='description' content=''>
 
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
-
+    
     <script type="text/javascript" src="js/analytics.js"></script>
   </head>
-
+  <!--testing  [deploy: production] -->
   <body>
 
   </body>
