testing auto deploybot

--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
     
     <script type="text/javascript" src="js/analytics.js"></script>
   </head>
-  <!--testing  [deploy: production] -->
+  <!--testing using auto, not manual [deploy: production] -->
   <body>
   Hi.
   </body>
