added fb + twitter metatags

--- a/template.html
+++ b/template.html
@@ -8,16 +8,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine, commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
     <meta name='description' content=''>
+    <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine, commissions, authorship, identity, DIY culture, entrepreneurship, artist as entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist as curator, artist as commissioner, on-demand economy, collaborative consumption, collaborative economy, gig-economy'>
+    
+    <!--Facebook Meta-->
+    <meta property="og:title" content="title goes here">
+    <meta property="og:image" content="link_to_image">
+    <meta property="og:description" content="description goes here">
+
+    <!--Twitter Meta-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@twitterhandle" />
+    <meta name="twitter:title" content="title goes here" />
+    <meta name="twitter:description" content="description goes here" />
+    <meta name="twitter:image" content="link_to_image" />
 
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     
     <script type="text/javascript" src="js/analytics.js"></script>
   </head>
-  <!--testing using auto, not manual [deploy: production] -->
+
   <body>
-  Hi.
+
   </body>
 
 </html>
