added news card

--- a/help.html
+++ b/help.html
@@ -11,11 +11,19 @@
     <meta name='description' content='Sign up now for a free one-on-one consultation!'>
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <style>
+      .centered {
+          text-align:center;
+          width:100%;
+          position: relative;
+          top: 60px;
+      }
+    </style>
     <script type="text/javascript" src="js/analytics.js"></script>
   </head>
   <body class="vip">
     <div><img class="block" src="img/consult2.png"/></div>
-    <div class="center">
+    <div class="centered">
     <iframe src="https://docs.google.com/forms/d/1mMJgjd5KtgDMky5F03rnzL-NUiYBNgXPXw4rtfHmon0/viewform?embedded=true" width="310" height="460" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
 
