--- a/template.html
+++ b/template.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="description goes here">
 
     <!--Twitter Meta-->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
     <meta name="twitter:site" content="@twitterhandle" />
     <meta name="twitter:title" content="title goes here" />
     <meta name="twitter:description" content="description goes here" />
