finished new project generator js

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>We are two commissioning bodies</h2>
        </header>
       <article>
-        <p><b>Liat Berdugo</b> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.format.com/" target="_blank">http://liatberdugo.com/</a>.</p>
+        <p><b>Liat Berdugo</b> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com/</a>.</p>
 <!--          liat's new comment-->
         <p><b>Emily Martinez</b> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
       </article>
@@ -52,13 +52,13 @@
 
 <div class="anxiouscontainer">
  
-  <div class="task">Things we're working on. . .</div>
+  <div class="welcome">anxious to make is making...</div>
 
-  <div id="card1" class="box center research">
+  <div id="card1" class="card center research">
     R&D<br/><br/><small>5 easy steps algorithm<br/>bots<br/>surveys</small>
   </div>
 
-  <div id="card2" class="box center critical-texts">
+  <div id="card2" class="card center critical-texts">
     Texts<br/><br/>
     <small>critical art practice and the sharing economy<br/><br/>
     mala onda: a guide for surviving the next five years (or the next 5 minutes) of accelerated change in post-capitalism's black magic vortex<br/><br/>
@@ -66,7 +66,7 @@
     tactics, movements, and forms of resistance for temporary, precarious laborers, knowledge workers, and cultural producers working today</small>
   </div>  
 
-  <div id="card3" class="box news">
+  <div id="card3" class="card news">
     <div class="center">News</div><br/>
     <small>
       <strong>02.2016</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps</em>, <a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale</a>, Berlin, Germany
@@ -79,26 +79,33 @@
     </small>    
   </div>
 
-  <div id="card4" class="box center internet-empire">
+  <div id="card4" class="card center internet-empire">
     <em>How to Make Yourself an Internet Empire</em><br/><br/>a case study
   </div>
 
-  <div id="card5" class="box center labor">
+  <div id="card5" class="card center labor">
     <em>How to Make Yourself a Documentary about Labor Conditions in the Capital "A" Art World</em><br/><br/>a case study
   </div>
 
-  <div id="card6" class="box center making-others">
+  <div id="card6" class="card center making-others">
     <em>Making Others</em><br/><img src="img/pete.png"><br/><br/><small>promotional video, performance featuring Voiceoverpete<br/>commissioned on Fiverr<br/><br/>coming soon...</small>
   </div>
 
-  <div id="card7" class="box center making-you">
+  <div id="card7" class="card center making-you">
     <img class="new" src="img/new.gif"/>
     <em>Making You</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/140888522?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Help us help you understand your needs. Watch this video, complete this <a href="http://anxioustomake.ga/makingyou.html" target="_blank">survey</a> and earn a FREE<br/>one-on-one Skype consultation.<br/><br/>For best results, view in HD.</small>
   </div>
 
-  <div id="card8" class="box center commissioning-body">
+  <div id="card14" class="card"></div>
+  <div id="card13" class="card"></div>
+  <div id="card12" class="card"></div>
+  <div id="card11" class="card"></div>
+  <div id="card10" class="card"></div>
+  <div id="card9" class="card"></div>
+
+  <div id="card8" class="card center commissioning-body">
     <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/><a href="http://www.eventbrite.de/e/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps-registration-20456886097" target="_blank">REGISTER NOW!</a></small>
   </div>
 
