--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine,commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, sourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, collaborative consumption, collaborative economy'>
     <meta name='description' content='Artists Liat Berdugo and Emily Martinez teach you how to make yourself into a commissioning body in five easy steps. We source from the sharing economy. We turn fully towards the anxieties to make -- not as paralyzingly fears, but as sources for radical generativity and new, collective ways of making in Industry 4.0 and beyond.'>
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 <body>
@@ -54,11 +54,11 @@
  
   <div class="welcome">anxious to make is making...</div>
 
-  <div id="card1" class="card center research">
+  <div id="card1" class="card draggable center research">
     R&D<br/><br/><small>5 easy steps algorithm<br/>bots<br/>surveys</small>
   </div>
 
-  <div id="card2" class="card center critical-texts">
+  <div id="card2" class="card draggable center critical-texts">
     Texts<br/><br/>
     <small>critical art practice and the sharing economy<br/><br/>
     mala onda: a guide for surviving the next five years (or the next 5 minutes) of accelerated change in post-capitalism's black magic vortex<br/><br/>
@@ -66,7 +66,7 @@
     tactics, movements, and forms of resistance for temporary, precarious laborers, knowledge workers, and cultural producers working today</small>
   </div>  
 
-  <div id="card3" class="card news">
+  <div id="card3" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
       <strong>02.2016</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps</em>, <a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale</a>, Berlin, Germany
@@ -79,33 +79,35 @@
     </small>    
   </div>
 
-  <div id="card4" class="card center internet-empire">
+  <div id="card4" class="card draggable center internet-empire">
     <em>How to Make Yourself an Internet Empire</em><br/><br/>a case study
   </div>
 
-  <div id="card5" class="card center labor">
+  <div id="card5" class="card draggable center labor">
     <em>How to Make Yourself a Documentary about Labor Conditions in the Capital "A" Art World</em><br/><br/>a case study
   </div>
 
-  <div id="card6" class="card center making-others">
-    <em>Making Others</em><br/><img src="img/pete.png"><br/><br/><small>promotional video, performance featuring Voiceoverpete<br/>commissioned on Fiverr<br/><br/>coming soon...</small>
+  <div id="card6" class="card draggable center making-others">
+    <img class="new" src="img/new.gif"/>
+    <em>Making Others</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/153431203?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card7" class="card center making-you">
-    <img class="new" src="img/new.gif"/>
+  <div id="card7" class="card draggable center making-you">
     <em>Making You</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/140888522?title=0&byline=0&portrait=0" width="300" height="169" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Help us help you understand your needs. Watch this video, complete this <a href="http://anxioustomake.ga/makingyou.html" target="_blank">survey</a> and earn a FREE<br/>one-on-one Skype consultation.<br/><br/>For best results, view in HD.</small>
   </div>
 
-  <div id="card14" class="card"></div>
-  <div id="card13" class="card"></div>
-  <div id="card12" class="card"></div>
-  <div id="card11" class="card"></div>
-  <div id="card10" class="card"></div>
-  <div id="card9" class="card"></div>
+  <div id="card14" class="card draggable"></div>
+  <div id="card13" class="card draggable"></div>
+  <div id="card12" class="card draggable"></div>
+  <div id="card11" class="card draggable"></div>
+  <div id="card10" class="card draggable"></div>
+  <div id="card9" class="card draggable"></div>
 
-  <div id="card8" class="card center commissioning-body">
+  <div id="card8" class="card draggable center commissioning-body">
     <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/><a href="http://www.eventbrite.de/e/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps-registration-20456886097" target="_blank">REGISTER NOW!</a></small>
   </div>
 
@@ -250,11 +252,13 @@
         Find out how to make yourself these things and more on our website.
       </marquee>
   </div>
+
 </div><!-- end container-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/utils/Draggable.min.js"></script>
 <script src="js/droppables.js" type="text/javascript"></script>
+
 </body>
 </html>
