--- a/projectgenerator.html
+++ b/projectgenerator.html
@@ -16,15 +16,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <style>
-      a, a:visited, a:focus {color: magenta; text-decoration: none;}
-      a:hover {color: magenta; text-decoration: underline;}
+      a, a:visited, a:focus {color: #FF0179; text-decoration: none;}
+      a:hover {color: #FF0179; text-decoration: underline;}
       a:focus {outline: 0;} 
 
       .makeart {
         width: 60%;
         height: 100px;
         background-color: yellow;
-        color:magenta;
+        color:#FF0179;
         display: block;
         margin: 50px auto;
         font-family: sans-serif;
@@ -50,7 +50,7 @@
         top: -0.8em;
         left: 2px;
         font-size: 40%;
-        color: magenta;
+        color: #FF0179;
       }
 
       /*****************TOOLTIP*****************/
@@ -146,6 +146,7 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/mediums.json"></script>
     <script type="text/javascript" src="js/topics.json"></script>
+    <script type="text/javascript" src="js/topics2.json"></script>
     <script type="text/javascript" src="js/adjectives.json"></script>
     <script type="text/javascript" src="js/adjectives2.json"></script>
     <script type="text/javascript" src="js/adverbs.json"></script>
