--- a/template.html
+++ b/template.html
@@ -24,12 +24,19 @@
     <meta name="twitter:image" content="link_to_image" />
 
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     
     <script type="text/javascript" src="js/analytics.js"></script>
   </head>
 
   <body>
 
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
   </body>
 
 </html>
