changed commission page layout

--- a/fucklabor.html
+++ b/fucklabor.html
@@ -14,21 +14,11 @@
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/commission.css">
-    <style>
-        html {
-            min-height: 100%;
-        }
-        body {
-            height: 100%;
-            margin: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed; 
-        }
-    </style>
+
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 
-<body class="relax">
+<body>
 
     <div class="container">
         <div class="row">
@@ -56,46 +46,32 @@
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/aricegirl/model-my-snake-with-your-message" target="_blank">I will model my pet snake with your message</a></p>
             </div>
 
+            <!--sample goes here-->
+            <div class="col-xs-12 col-sm-8 col-md-8">
+                <h1 class="title">Here is ours</h1>
+                <img src="img/snake.jpg" class="img-responsive">      
+            </div>
+
             <!--three additional examples go here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-offset-4">
                 <h1 class="title">Make Your Own</h1>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/petmodel1.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                <div class="row"> 
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/millamaija/take-an-unique-picture-with-my-dogs-with-your-text" target="_blank">I will take an unique picture with my dachshunds with your text</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/petmodel2.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/jenna561/take-a-picture-of-my-bearded-dragon-with-your-message" target="_blank">I will photograph my bearded dragon with your message or logo</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/petmodel3.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/cromif/send-you-3-hq-photos-of-my-monkey-holding-your-custom-message-or-logo" target="_blank">I will send you 3 HQ photos of my Monkey holding your custom message or logo</a>
                     </div>
                 </div>
             </div>  
-
-            <!--sample goes here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <h1 class="title">Here is ours</h1>
-                <img src="img/snake.jpg" class="img-responsive">      
-            </div>
            
         </div><!--end container-->
-        <div class="logo"><img src="img/anxious-logo-www.png" class="img-responsive"></div>
     </div><!--end row-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
