--- a/hypnosis.html
+++ b/hypnosis.html
@@ -9,26 +9,16 @@
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
     <meta name='description' content='Hypnosis to Engender Trust: Anxious to Make custom audio track for renewing faith in the systems that govern our lives'>
-    <meta name='keywords' content='distrust,  mistrust,  trust,  faith,  hypnosis, systemic collapse'>
+    <meta name='keywords' content='distrust, mistrust, trust, faith, intuition, hypnosis, systemic collapse'>
     
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/commission.css">
-    <style>
-        html {
-            height: 100%;
-        }
-        body {
-            height: 100%;
-            margin: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-    </style>
+
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 
-<body class="relax">
+<body>
 
     <div class="container">
         <div class="row">
@@ -41,48 +31,34 @@
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/bbmagic/record-a-personalized-self-hypnosis-mp3-for-you" target="_blank">I will record a personalized self hypnosis mp3 for you</a></p>
             </div>
 
+            <!--sample goes here-->
+            <div class="col-xs-12 col-sm-8">
+                <h1 class="title">Listen to ours!</h1>
+                <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153563164?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>      
+            </div>
+
             <!--three additional examples go here-->
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-8 col-sm-offset-4">
                 <h1 class="title">Make Your Own</h1>
                 <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/hypnosis1.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/heatmalm/create-one-personalized-hypnosis-audio-file" target="_blank">I will create one personalized hypnosis audio file</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/hypnosis2.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/superioraudio/mix-your-meditation-or-hypnosis-audio" target="_blank">I will mix your Meditation or Hypnosis Audio</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/hypnosis3.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/bornfreetherapy/create-a-personalized-hypnosis-mp3" target="_blank">I will create a personalized Hypnosis MP3</a>
                     </div>
                 </div>
             </div>   
 
-            <!--sample goes here-->
-            <div class="col-xs-12 col-sm-4">
-                <h1 class="title">Listen to ours!</h1>
-                <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153563164?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>      
-            </div>
-           
         </div><!--end container-->
-        <div class="logo"><img src="img/anxious-logo-www.png" class="img-responsive"></div>
     </div><!--end row-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
