--- a/timemanagement.html
+++ b/timemanagement.html
@@ -14,21 +14,11 @@
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/commission.css">
-    <style>
-        html {
-            height: 100%;
-        }
-        body {
-            height: 100%;
-            margin: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-    </style>
+
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 
-<body class="relax">
+<body>
 
     <div class="container">
         <div class="row">
@@ -48,51 +38,36 @@
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/flexvocals/record-a-250-word-voice-over-in-american-english" target="_blank">I will create your Pro voice over Today</a></p>
             </div>
 
+             <!--sample goes here-->
+            <div class="col-xs-12 col-sm-8">
+                <h1 class="title">Listen to ours!</h1>
+                <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153562705?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>       
+            </div>
+
             <!--three additional examples go here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-8">
                 <h1 class="title">Make Your Own</h1>
                 <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/motivation1.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/treeoflife/create-motivational-audio-file-personalized-mind-cleanse" target="_blank">I will voice motivational mantras, personalized mind cleanse</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/motivation2.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/esthergoh/do-a-voiceover-in-singaporean-accent-days-to-deliver-depending-on-the-pages" target="_blank">I will do a voiceover in Singaporean accent</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/motivation3.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/jjvotn/voice-anything-you-want-in-an-epicdeep-evil-voice" target="_blank">I will voice anything you want in an epic or deep evil voice</a>
                     </div>
                 </div>
             </div>  
 
-            <!--sample goes here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <h1 class="title">Listen to ours!</h1>
-                <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153562705?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>       
-            </div>
-           
         </div><!--end container-->
-        <div class="logo"><img src="img/anxious-logo-www.png" class="img-responsive"></div>
     </div><!--end row-->
 
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
