--- a/forecasting.html
+++ b/forecasting.html
@@ -14,21 +14,11 @@
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/commission.css">
-    <style>
-        html {
-            height: 100%;
-        }
-        body {
-            height: 100%;
-            margin: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-    </style>
+
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 
-<body class="relax">
+<body>
 
     <div class="container">
         <div class="row">
@@ -53,48 +43,34 @@
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/psychicthe/provide-a-truthful-answer-to-your-question" target="_blank">I will provide a truthful audio answer to your question</a></p>
             </div>
 
+            <!--sample goes here-->
+            <div class="col-xs-12 col-sm-8 col-md-8">
+                <h1 class="title">Listen to ours!</h1>
+                <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153562411?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>       
+            </div>
+
             <!--three additional examples go here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-8 col-md-8">
                 <h1 class="title">Make Your Own</h1>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/psychic3.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                <div class="row">     
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/delaweiss/give-you-an-intuitive-psychic-reading" target="_blank">I will give you a specific intuitive psychic reading</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/psychic1.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/akashicsoul/do-a-psychic-reading-and-answer-one-question-with-detail" target="_blank">I will do a psychic reading and answer one question with detail</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/psychic2.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/indianastro/prepare-career-astrology-report-and-persosnlaity-test" target="_blank">I will prepare career astrology report and personality test</a>
                     </div>
                 </div>
             </div>  
 
-            <!--sample goes here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <h1 class="title">Listen to ours!</h1>
-                <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153562411?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>       
-            </div>
-           
         </div><!--end container-->
-        <div class="logo"><img src="img/anxious-logo-www.png" class="img-responsive"></div>
     </div><!--end row-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
