--- a/nevertalkaboutyourworkagain.html
+++ b/nevertalkaboutyourworkagain.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Never Talk About Your Work Again</title>
+    <title>Anxious to Never Have to Talk About Your Work Again</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,17 +14,7 @@
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/commission.css">
-    <style>
-        html {
-            height: 100%;
-        }
-        body {
-            height: 100%;
-            margin: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-    </style>
+
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 
@@ -35,7 +25,7 @@
             <h1 class="pageheading">Commission a Human Billboard to Talk About Your Work</h1>
 
             <!--script or text goes here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-4">
                 <p class="title">Never talk about your work again</p>
                 <div class="clipvertical">    
                     <p class="script">This artwork is about the sharing economy
@@ -44,46 +34,32 @@
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/ale_brasil/write-your-message-on-my-tummy" target="_blank">I will write your message on my tummy</a></p>
             </div>
 
+            <!--sample goes here-->
+            <div class="col-xs-12 col-sm-8">
+                <h1 class="title">Here is ours</h1>
+                <img src="img/humanbillboard.jpg" class="img-responsive">      
+            </div>
+
             <!--three additional examples go here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-8 col-sm-offset-4">
                 <h1 class="title">Make Your Own</h1>
                 <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/human1.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/caegirl/write-your-message-on-my-feet" target="_blank">I will write your message on my feet</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/human2.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/bwayne212/write-anything-you-want-on-my-six-pack-abs" target="_blank">I will write anything on an ab models six pack</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/human3.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/crystalife/write-and-draw-anything-on-face-in-24-hours" target="_blank">I will write and draw anything on my face in 24 HOURS</a>
                     </div>
                 </div>
             </div>  
-
-            <!--sample goes here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <h1 class="title">Here is ours</h1>
-                <img src="img/humanbillboard.jpg" class="img-responsive">      
-            </div>
-           
+  
         </div><!--end container-->
-        <div class="logo"><img src="img/anxious-logo-www.png" class="img-responsive"></div>
     </div><!--end row-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
