--- a/twins.html
+++ b/twins.html
@@ -14,24 +14,11 @@
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/commission.css">
-    <style>
-        html {
-            height: 100%;
-        }
-        body {
-            height: 100%;
-            margin: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-        .pageheading{
-            font-size: 3em;
-        }
-    </style>
+
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 
-<body class="relax">
+<body>
 
     <div class="container">
         <div class="row">
@@ -189,48 +176,34 @@
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/theadtwins/create-a-promotional-video-featuring-twins" target="_blank">I will create a promotional video featuring twins</a> and <a href="https://www.fiverr.com/ashwanithakur/create-a-special-promotional-video-featuring-twins" target="_blank">I will create a Special Promotional Video featuring TWINS</a> and <a href="https://www.fiverr.com/roberthess/get-australian-twins-to-read-out-your-message" target="_blank">I will get Australian twins to read out your message</a></p>
             </div>
 
+            <!--sample goes here-->
+            <div class="col-xs-12 col-sm-8">
+                <h1 class="title">Watch ours!</h1>
+                <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>       
+            </div>
+
             <!--three additional examples go here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-8">
                 <h1 class="title">Make Your Own</h1>
                 <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/twins1.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/theadtwins/create-a-promotional-video-featuring-twins" target="_blank">I will create a promotional video featuring twins</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/twins2.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/ashwanithakur/create-a-special-promotional-video-featuring-twins" target="_blank">I will create a Special Promotional Video featuring TWINS</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/twins3.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/roberthess/get-australian-twins-to-read-out-your-message" target="_blank">I will get Australian twins to read out your message</a>
                     </div>
                 </div>
             </div>  
 
-            <!--sample goes here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <h1 class="title">Watch ours!</h1>
-                <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/152641090?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>       
-            </div>
-           
         </div><!--end container-->
-        <div class="logo"><img src="img/anxious-logo-www.png" class="img-responsive"></div>
     </div><!--end row-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
