--- a/unfamiliarmaterials.html
+++ b/unfamiliarmaterials.html
@@ -14,21 +14,11 @@
     <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/commission.css">
-    <style>
-        html {
-            height: 100%;
-        }
-        body {
-            height: 100%;
-            margin: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-    </style>
+
     <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 
-<body class="relax">
+<body>
 
     <div class="container">
         <div class="row">
@@ -49,48 +39,34 @@
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/saavfabb/say-anything-you-want-in-a-video-while-ironing" target="_blank">I will say Anything You Want While Ironing In A HD Video, In Italian, English, Spanish</a></p>
             </div>
 
+            <!--sample goes here-->
+            <div class="col-xs-12 col-sm-8 col-md-8">
+                <h1 class="title">Watch ours!</h1>
+                <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587577?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>       
+            </div>
+
             <!--three additional examples go here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-8 col-md-8">
                 <h1 class="title">Make Your Own</h1>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/materials1.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                <div class="row">  
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/milkveins/make-a-performance-art-video-for-you" target="_blank">I will make a performance art video for you</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/materials2.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/kimberlye/create-a-tutorial-cooking-video-of-how-to-cook-your-recipe" target="_blank">I will create an HD cooking tutorial video of your recipe</a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src="img/materials3.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-4">
                         <span class="recommendation">We recommend:<br/></span> 
                         <a href="https://www.fiverr.com/mr_marcus/be-drunk-at-the-bar-and-relay-your-message" target="_blank">I will be drunk at the bar and relay your message</a>
                     </div>
                 </div>
             </div>  
 
-            <!--sample goes here-->
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <h1 class="title">Watch ours!</h1>
-                <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/152641090?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>       
-            </div>
-           
         </div><!--end container-->
-        <div class="logo"><img src="img/anxious-logo-www.png" class="img-responsive"></div>
     </div><!--end row-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
