minor changes, added media queries

--- a/downloads.html
+++ b/downloads.html
@@ -50,6 +50,11 @@
         .download img:hover {
           border: 2px solid #FF0179;
         }
+        @media screen and (max-width: 768px) {
+           .title {
+            font-size: 2.5em;
+           }
+        }
 
     </style>
     
