--- a/generators.html
+++ b/generators.html
@@ -46,6 +46,11 @@
           color: #FF0179;
           text-decoration: none;
         }
+        @media screen and (max-width: 768px) {
+           .title {
+            font-size: 2.5em;
+           }
+        }
 
     </style>
     
