added newid gen, words to project gen, gulp and browser-sync

--- a/forecasting.html
+++ b/forecasting.html
@@ -28,12 +28,15 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
                 <p class="title"><strong>Future Proof Your Career</strong></p>
                 <div class="clipvertical">    
-                    <p class="script">Hello Psychicthe,<br/><br/>  
+                    <p class="script">LETTER TO THE PSYCHIC<br/><br/>
+                    Hello Psychicthe,<br/><br/>  
                     I'm an artist. I have some concerns about my career. I'm worried that my art practice has failed to keep pace with the demands of the rapidly shifting forces that shape the economy. I've lost faith in the markets and institutions that support artists– they are being dismantled and compromised in ways that make me believe that continuing to pursue an art career any further (I've been doing this for 20 years) is crazy and unsustainable. At the same time, I can't stop doing this, making art.  And I don't know what to do.
                     <br/> <br/> 
                     I just feel overwhelmed by this problem of sustainability, of becoming too vulnerable, in the face of so many changes, especially as I get older. 
                     <br/> <br/> 
-                    So, I have been wondering. . . should I change or diversify my practice? In other words, is there a way to "future proof" my art career so that I can stay a step ahead of the game, ahead of volatile economic markets, without compromising my integrity? My intuition tells me that better forecasting abilities about these unpredictable changes, both internal and external to me, would be of tremendous value. 
+                    So, I have been wondering. . . should I change or diversify my practice? In other words, is there a way to "future proof" my art career so that I can stay a step ahead of the game, ahead of volatile economic markets, without compromising my integrity?
+                    <br/> <br/> 
+                    My intuition tells me that better forecasting abilities about these unpredictable changes, both internal and external to me, would be of tremendous value. 
                     <br/> <br/> 
                     Can you help me?
                     <br/> <br/> 
