--- a/fucklabor.html
+++ b/fucklabor.html
@@ -28,7 +28,8 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
                 <p class="title">Write Scripts, lots of Scripts.</p>
                 <div class="clipvertical">    
-                    <p class="script">INDEX CARD ONE
+                    <p class="script">SCRIPT<br/><br/>
+                    INDEX CARD ONE
                     <br/><br/>
                     you are blocked. you are blocked because there are are so many books to read. so many people are Expert. who are you to make this art?
                     <br/><br/>
