--- a/hypnosis.html
+++ b/hypnosis.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Commission a Hypnosis Session</title>
+    <title>Anxious to Commission a Custom Hypnosis Audio Track</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,12 +22,12 @@
 
     <div class="container">
         <div class="row">
-            <h1 class="pageheading">Commission a Hypnosis Session to Engender Trust</h1>
+            <h1 class="pageheading">Commission a Custom Hypnosis Audio Track</h1>
 
             <!--script or text goes here-->
             <div class="col-xs-12 col-sm-4">
                 <h1 class="title">Rebuild Trust</h1>
-                <p>We know, you've lost faith in everything. We did too. That's why we commissioned this custom hypnosis session to renew our sense of trust. We recommend you listen to it. Or commission your own.</p>
+                <p>We know, you've lost faith in everything. We did too. That's why we commissioned this custom hypnosis session to renew our sense of trust. We recommend you listen to it. Or commission your own.<br/><br/>[skip ahead to custom section: 13:27 - 15:52]</p>
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/bbmagic/record-a-personalized-self-hypnosis-mp3-for-you" target="_blank">I will record a personalized self hypnosis mp3 for you</a></p>
             </div>
 
