--- a/nevertalkaboutyourworkagain.html
+++ b/nevertalkaboutyourworkagain.html
@@ -28,7 +28,7 @@
             <div class="col-xs-12 col-sm-4">
                 <p class="title">Never talk about your work again</p>
                 <div class="clipvertical">    
-                    <p class="script">This artwork is about the sharing economy
+                    <p class="script">SCRIPT<br/><br/>This artwork is about the sharing economy
                     </p>
                 </div>   
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/ale_brasil/write-your-message-on-my-tummy" target="_blank">I will write your message on my tummy</a></p>
