--- a/timemanagement.html
+++ b/timemanagement.html
@@ -28,11 +28,10 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
                 <p class="title"><strong>Improve Performance</strong></p>
                 <div class="clipvertical">    
-                    <p class="script">
+                    <p class="script">SCRIPT<br/><br/>
                     “anxious to make” custom audio track for time management.<br/><br/> 
                     (note: say “anxious to make” as if it is a brand, and you are announcing it, proudly!)
                     <br/><br/>
-                    SCRIPT<br/><br/>
                     i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. </p>
                 </div>   
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/flexvocals/record-a-250-word-voice-over-in-american-english" target="_blank">I will create your Pro voice over Today</a></p>
