added downloads, importantthings, mobile test

--- a/generators.html
+++ b/generators.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Anxious to Make: Our Generators</title>
+    <title>Anxious to Generate</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -91,13 +91,17 @@
             <img src="img/database.jpg" class="img-responsive" alt="Mug/Rug Generator"><span>Mug/Rug<br/>Generator</span></a>
           </div> 
           <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="interngenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Intern Generator"><span>Intern<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
             <a href="moneymakinggenerator.html">
             <img src="img/database.jpg" class="img-responsive" alt="Money Making Generator"><span>Money Making<br/>Generator</span></a>
-          </div>   
+          </div> 
+          <div class="col-xs-6 col-sm-4 col-md-3 database">
+            <a href="importantthings.html">
+            <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>Value<br/>Generator</span></a>
+          </div>  
+          <!-- <div class="col-xs-6 col-sm-4 col-md-3 database">
+            <a href="interngenerator.html">
+            <img src="img/database.jpg" class="img-responsive" alt="Intern Generator"><span>Intern<br/>Generator</span></a>
+          </div> -->
         </div>
     </div>
 
