--- a/hypnosis.html
+++ b/hypnosis.html
@@ -27,7 +27,20 @@
             <!--script or text goes here-->
             <div class="col-xs-12 col-sm-4">
                 <h1 class="title">Rebuild Trust</h1>
-                <p>We know, you've lost faith in everything. We did too. That's why we commissioned this custom hypnosis session to renew our sense of trust. We recommend you listen to it. Or commission your own.<br/><br/>[skip ahead to custom section: 13:27 - 15:52]</p>
+                <div class="clipvertical">    
+                    <p class="script">
+                    LETTER TO BBMAGIC
+                    <br/><br/>
+                    Hello Bbmagic, 
+                    <br/><br/>
+                    I am an artist. I would like for this custom hypnosis track to be addressed to people with a creative practice. There seems to be growing sense of distrust in the systems that govern our lives, careers, communities, nations, planet, etc. I want this hypnosis session to engender trust, to renew our faith in all of the above. If you could begin with something like, "Hello artist, writer, poet, painter. . ." that would be great!  After that, you can address the listener as, "artist".
+                    <br/><br/>
+                    Let me know if you have any questions.
+                    <br/><br/>
+                    Thank you!<br/>
+                    Emily
+                    </p>
+                </div>   
                 <p class="credit">Commissioned from: <a href="https://www.fiverr.com/bbmagic/record-a-personalized-self-hypnosis-mp3-for-you" target="_blank">I will record a personalized self hypnosis mp3 for you</a></p>
             </div>
 
@@ -36,7 +49,8 @@
                 <h1 class="title">Listen to ours!</h1>
                 <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153563164?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>      
+                </div>
+                <small>[skip ahead to custom section: 13:27 - 15:52]</small>      
             </div>
 
             <!--three additional examples go here-->
