--- a/downloads.html
+++ b/downloads.html
@@ -68,17 +68,17 @@
           <h1 class="title">Our Downloads</h1>
           <div class="col-xs-12 col-sm-6 col-md-4 download">
             <a href="media/RitualsForRemovingCreativeBlocks.pdf" target="_blank">
-            <img src="img/rituals.png" class="img-responsive" alt="Rituals For Removing Creative Blocks"></a>
+            <img src="img/download-rituals.jpg" class="img-responsive" alt="Rituals For Removing Creative Blocks"></a>
             <span>Rituals for Removing Creative Blocks</span>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 download">
-            <a href="#">
-            <img src="http://placehold.it/480x770" class="img-responsive" alt="How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook"></a>
+            <a href="media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf">
+            <img src="img/download-makeyourself.jpg" class="img-responsive" alt="How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook"></a>
             <span>How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook</span>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 download">
-            <a href="#">
-            <img src="http://placehold.it/480x770" class="img-responsive" alt="Contract for Audience of One"></a>
+            <a href="media/ContractForAudienceOfOne.pdf">
+            <img src="img/download-contract.jpg" class="img-responsive" alt="Contract for Audience of One"></a>
             <span>Contract for Audience of One</span>
           </div>  
         </div>
