why don't you wooooooork?????

--- a/mobile.html
+++ b/mobile.html
@@ -115,7 +115,7 @@
       }
         
       .wrapper:hover .tooltip,
-      .wrapper > .tipClick:focus + .tooltip {
+      .wrapper:focus .tooltip {
         opacity: 1;
         pointer-events: auto;
         -webkit-transform: translateY(0px);
@@ -242,7 +242,7 @@
                 </span>
 
 
-<h1> click here
+<h1> click here PLEEEEAAAZZZZZZZ work!!!!
 <div class="wrapper">
   <sup><span class="glyphicon glyphicon-shopping-cart tipClick" aria-hidden="true"></span></sup>
   <div class="tooltip">We recommend <a href="' + mediumUrl + '" target="_blank">' + mediumSource + '</a></div>
